Sensei gateways