@@ -27,7 +27,8 @@ public class EventBatch {
   private static final Logger log = Logger.getLogger(EventBatch.class);
   private String minimumVersion;
   private String maximumVersion;
-  private List<Pair<String, String>> events = new ArrayList<Pair<String, String>>();
+  private final List<Pair<String, String>> events = new ArrayList<Pair<String, String>>();
+
   public void update(JSONObject event, String version) {
     if (minimumVersion == null) {
       minimumVersion = version;
@@ -38,6 +39,7 @@ public class EventBatch {
     maximumVersion = version;
     events.add(new Pair<String, String>(version, event.toString()));
   }
+
   public void flusToDisk(File directory) {
     File file = new File(directory, minimumVersion + "-" + maximumVersion + ".cache");
     DataOutputStream outputStream = null;
@@ -55,6 +57,7 @@ public class EventBatch {
       IOUtils.closeQuietly(outputStream);
     }
   }
+
   public static Pair<String, String> getVersionInfo(String fileName) {
     if (!fileName.endsWith(".cache") || !fileName.contains("-")) {
       throw new IllegalStateException("the name of the cache chunk is incorrect = " + fileName);
@@ -63,17 +66,19 @@ public class EventBatch {
     String firstVersion = versions[0];
     String secondVersion = versions[1];
     return new Pair<String, String>(firstVersion, secondVersion);
-    
+
   }
+
   public static EventBatch recreateFromDisk(File directory, String name) {
     Pair<String, String> versionInfo = getVersionInfo(name);
     EventBatch eventBatch = new EventBatch();
     eventBatch.minimumVersion = versionInfo.getFirst();
     eventBatch.maximumVersion = versionInfo.getSecond();
     DataInputStream inputStream = null;
-    
+
     try {
-      inputStream = new DataInputStream(new GZIPInputStream(new BufferedInputStream(new FileInputStream(new File(directory, name)))));
+      inputStream = new DataInputStream(new GZIPInputStream(new BufferedInputStream(
+          new FileInputStream(new File(directory, name)))));
       int count = inputStream.readInt();
       for (int i = 0; i < count; i++) {
         String version = inputStream.readUTF();
@@ -86,42 +91,51 @@ public class EventBatch {
     } finally {
       IOUtils.closeQuietly(inputStream);
     }
-    Assert.state(eventBatch.minimumVersion.equals(eventBatch.events.get(0).getFirst()), "The first version in the fileName to the first version inside the file" + name);
-    Assert.state(eventBatch.maximumVersion.equals(eventBatch.events.get(eventBatch.events.size() - 1).getFirst()), "The first version in the fileName to the first version inside the file" + name);
+    Assert.state(eventBatch.minimumVersion.equals(eventBatch.events.get(0).getFirst()),
+      "The first version in the fileName to the first version inside the file" + name);
+    Assert.state(eventBatch.maximumVersion.equals(eventBatch.events.get(
+      eventBatch.events.size() - 1).getFirst()),
+      "The first version in the fileName to the first version inside the file" + name);
     return eventBatch;
   }
+
   public static Collection<String> getAvailableBatches(File directory) {
-    String[] list = directory.list(new FilenameFilter() {      
+    String[] list = directory.list(new FilenameFilter() {
       @Override
-      public boolean accept(File dir, String name) {        
+      public boolean accept(File dir, String name) {
         return name.endsWith(".cache") && name.contains("-");
       }
-    });    
+    });
     if (list == null) {
-      return Collections.EMPTY_LIST;
+      return Collections.emptyList();
     }
     return Arrays.asList(list);
   }
-  public static Collection<String> getObsoleteFiles(Collection<String> fileNames, Comparator<String> versionComparator, String currentVersion) {
+
+  public static Collection<String> getObsoleteFiles(Collection<String> fileNames,
+      Comparator<String> versionComparator, String currentVersion) {
     Collection<String> ret = new ArrayList<String>();
     for (String fileName : fileNames) {
-      Pair<String, String> versionInfo = getVersionInfo( fileName);
+      Pair<String, String> versionInfo = getVersionInfo(fileName);
       if (versionComparator.compare(currentVersion, versionInfo.getSecond()) > 0) {
         ret.add(fileName);
       }
     }
-    return ret;     
+    return ret;
   }
-  public static Collection<String> getRelevantFiles(Collection<String> fileNames, Comparator<String> versionComparator, String currentVersion) {
+
+  public static Collection<String> getRelevantFiles(Collection<String> fileNames,
+      Comparator<String> versionComparator, String currentVersion) {
     Collection<String> ret = new ArrayList<String>();
     for (String fileName : fileNames) {
-      Pair<String, String> versionInfo = getVersionInfo( fileName);
+      Pair<String, String> versionInfo = getVersionInfo(fileName);
       if (versionComparator.compare(currentVersion, versionInfo.getSecond()) < 0) {
         ret.add(versionInfo.getSecond());
       }
     }
-    return ret;     
+    return ret;
   }
+
   public List<Pair<String, String>> getEvents() {
     return events;
   }
